--- a/EzModelStateTable/AlanRichardsonAPIs/AlanRichardsonAPIs.csproj
+++ b/EzModelStateTable/AlanRichardsonAPIs/AlanRichardsonAPIs.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EzModelStateTable\EzModelStateTable.csproj" />
+  </ItemGroup>
 </Project>
