Initial commit of synchronous http client executer.  Updated RichardsonAPIsAdapterExecution

--- a/EzModelStateTable/RichardsonAPIsAdapterExecution/RichardsonAPIsAdapterExecution.csproj
+++ b/EzModelStateTable/RichardsonAPIsAdapterExecution/RichardsonAPIsAdapterExecution.csproj
@@ -7,5 +7,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EzModelStateTable\EzModelStateTable.csproj" />
+    <ProjectReference Include="..\SynchronousHttpClientExecuter\SynchronousHttpClientExecuter.csproj" />
   </ItemGroup>
 </Project>
