ignoring release and debug directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .DS_Store
 .vs
+/EzModel State Generation example/EzModel State Generation example/obj/Release
+/EzModel State Generation example/EzModel State Generation example/obj/Debug/EzModel State Generation example.csproj.AssemblyReference.cache
